force-app/main/default/objects/Book__c/fields/Book_Image_Cover__c.field-meta.xml
<CustomField>
    <fullName>Book_Image_Cover__c</fullName>
    <formula>IMAGE( Book_Image_Url__c , &quot;Book Image Cover&quot;, 200,200)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Book Image Cover</label>
    <type>Text</type>
</CustomField>