force-app/main/default/objects/Book__c/fields/Book_Image_Url__c.field-meta.xml
<CustomField>
    <fullName>Book_Image_Url__c</fullName>
    <description>URL for book image cover</description>
    <label>Book Image Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>