force-app/main/default/objects/Book__c/fields/Edition__c.field-meta.xml
<CustomField>
    <fullName>Edition__c</fullName>
    <description>Version of a book title</description>
    <inlineHelpText>e.g. 5th Edition</inlineHelpText>
    <label>Edition</label>
    <length>15</length>
    <type>Text</type>
</CustomField>