force-app/main/default/objects/Book__c/fields/Genre__c.field-meta.xml
<CustomField>
    <fullName>Genre__c</fullName>
    <description>Category the book falls under</description>
    <label>Genre</label>
    <length>25</length>
    <type>Text</type>
</CustomField>