force-app/main/default/objects/Book__c/fields/ISBN__c.field-meta.xml
<CustomField>
    <fullName>ISBN__c</fullName>
    <description>International Standard Book Number used to identify the book. Usually appears as a barcode</description>
    <externalId>true</externalId>
    <inlineHelpText>An example of an ISBN-13 number would be 9783161484100</inlineHelpText>
    <label>ISBN</label>
    <length>13</length>
    <type>Text</type>
</CustomField>