force-app/main/default/objects/Book__c/fields/Number_of_Available_Copies__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Available_Copies__c</fullName>
    <description>Number of Available copies of the same book</description>
    <label>Number of Available Copies</label>
    <summaryFilterItems>
        <field>Book_Copy__c.Status__c</field>
        <operation>equals</operation>
        <value>Available</value>
    </summaryFilterItems>
    <summaryForeignKey>Book_Copy__c.Book__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>