force-app/main/default/objects/Book__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Title of the book</description>
    <label>Title</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>